--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "node-red-contrib-soap",
+    "name": "node-red-contrib-soap-nothrow",
     "version": "0.0.3",
     "description": "SOAP Client for Node Red",
     "main": "index.js",
@@ -9,7 +9,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/chameleonbr/node-red-contrib-soap.git"
+        "url": "git+https://github.com/jloupdef/node-red-contrib-soap.git"
     },
     "keywords": [
         "soap",
